# common-dp

./: frames_2025-07-20_21.25.06.gv  help.txt  interactive_pick_place.txt  readme.md  t.txt  wiring.md
install/: local_setup.sh  setup.sh
install/thor_bringup/share/thor_bringup/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/thor_bringup/share/thor_bringup/cmake/: thor_bringupConfig.cmake
install/thor_controller/share/thor_controller/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/thor_controller/share/thor_controller/cmake/: ament_cmake_export_dependencies-extras.cmake  thor_controllerConfig.cmake
install/thor_controller/share/thor_controller/launch/: controller.launch.py
install/thor_joystick/lib/thor_joystick/: joystick_joint_controller  joystick_moveit_controller  joystick_pose_controller
install/thor_joystick/share/thor_joystick/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/thor_joystick/share/thor_joystick/cmake/: thor_joystickConfig.cmake
install/thor_manipulation/lib/thor_manipulation/: control_interface  enhanced_pick_place_node  pick_place_task_constructor  task_coordinator_node
install/thor_manipulation/share/thor_manipulation/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/thor_manipulation/share/thor_manipulation/cmake/: thor_manipulationConfig.cmake
install/thor_manipulation/share/thor_manipulation/config/: electromagnet_controller.cpp  sensors.yaml
install/thor_moveit/share/thor_moveit/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/thor_moveit/share/thor_moveit/config/: initial_positions.yaml  joint_limits.yaml  ros2_controllers.yaml  sensors_3d.yaml  thor_arm.ros2_control.xacro  thor_arm.srdf
install/thor_perception/lib/thor_perception/: auto_object_spawner.py  interactive_pick_place.py  object_spawner.py  perception_node.py  pick_place_controller.py
install/thor_perception/share/thor_perception/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/thor_perception/share/thor_perception/cmake/: thor_perceptionConfig.cmake
install/thor_perception/share/thor_perception/config/: camera_config.yaml  electromagnet_controller.yaml
install/thor_perception/share/thor_perception/launch/: complete_demo.launch.py  interactive.launch.py
install/thor_server/lib/thor_server/: hardware_command_node  task_server_node
install/thor_server/share/thor_server/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/thor_server/share/thor_server/action/: JointTask.idl
install/thor_server/share/thor_server/cmake/: ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  export_thor_server__rosidl_generator_cExport-noconfig.cmake  export_thor_server__rosidl_generator_cExport.cmake  export_thor_server__rosidl_generator_pyExport-noconfig.cmake  export_thor_server__rosidl_generator_pyExport.cmake  export_thor_server__rosidl_typesupport_fastrtps_cExport-noconfig.cmake  export_thor_server__rosidl_typesupport_fastrtps_cExport.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake  (+6 more)
install/thor_teleop/lib/thor_teleop/: teleop_joint_control.py  teleop_pose_control  teleop_pose_control.py  teleop_ps5_control.py
install/thor_teleop/share/thor_teleop/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/thor_urdf/share/thor_urdf/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
log/: latest_build
src/thor_bringup/launch/: simulated_robot.launch.py
src/thor_controller/config/: thor_controllers.yaml
src/thor_hardware/: CMakeLists.txt  README.md  package.xml
src/thor_hardware/firmware/thor_firmware/: thor_firmware.ino
src/thor_hardware/include/thor_hardware/: thor_arm_hardware_interface.hpp
src/thor_hardware/launch/: hardware.launch.py
src/thor_hardware/src/: thor_arm_hardware_interface.cpp  thor_hardware.xml
src/thor_hardware/urdf/: thor_arm.ros2_control.xacro
src/thor_hardware2/: CMakeLists.txt  README.md  package.xml  setup.py
src/thor_hardware2/config/: camera_config.yaml  thor_controllers.yaml  thor_hardware.yaml
src/thor_hardware2/firmware/arduino_mega_controller/: arduino_mega_controller.ino
src/thor_hardware2/include/thor_hardware2/: serial_communication.hpp  thor_hardware_interface.hpp
src/thor_hardware2/launch/: cameras.launch.py  full_system.launch.py  hardware.launch.py
src/thor_hardware2/scripts/: camera_node.py  motor_test.py  system_monitor.py
src/thor_hardware2/src/: serial_communication.cpp  thor_hardware_interface.cpp  thor_hardware_plugin.xml
src/thor_learning/: CMakeLists.txt  README.md  package.xml
src/thor_learning/scripts/: data_recorder.py
src/thor_manipulation/: CMakeLists.txt
src/thor_manipulation/launch/: pick_place.launch.py
src/thor_manipulation/scripts/: object_detector.py  pick_place_node.py  simple_command_interface.py  spawn_objects.py  thor_task_constructor_demo.py
src/thor_moveit/: .setup_assistant  CMakeLists.txt
src/thor_moveit/config/: moveit_controllers.yaml  thor_arm.srdf  thor_arm.urdf.xacro
src/thor_moveit/launch/: moveit.launch.py
src/thor_perception/: CMakeLists.txt
src/thor_perception/config/: perception_params.yaml  pick_place_params.yaml
src/thor_perception/launch/: interactive.launch.py  object.launch.py  perception.launch.py
src/thor_perception/src/: auto_object_spawner.py  auto_spawn_trigger.py  electromagnet_controller.py  interactive_pick_place.py  perception_node.py
src/thor_teleop/: CMakeLists.txt  package.xml
src/thor_teleop/launch/: joy_control.launch.py
src/thor_teleop/scripts/: teleop_joint_control.py  teleop_ps5_control_pose.py
src/thor_teleop/src/: teleop_pose_control.cpp
src/thor_training/: readme.md
src/thor_urdf/urdf/: table.urdf.xacro  thor.urdf.xacro  thor_gazebo.xacro
(+35 files in other folders)
