<?xml version="1.0"?>
<package format="3">
    <name>thor_perception</name>
    <version>1.0.0</version>
    <description>Thor robotic arm perception and manipulation package</description>
    <maintainer email="your.email@example.com">Your Name</maintainer>
    <license>Apache-2.0</license>
    
    <buildtool_depend>ament_cmake</buildtool_depend>
    <buildtool_depend>ament_cmake_python</buildtool_depend>
    
    <depend>rclpy</depend>
    <depend>std_msgs</depend>
    <depend>geometry_msgs</depend>
    <depend>sensor_msgs</depend>
    <depend>tf2_ros</depend>
    <depend>tf2_geometry_msgs</depend>
    <depend>cv_bridge</depend>
    <depend>pcl_conversions</depend>
    <depend>pcl_ros</depend>
    <depend>gazebo_msgs</depend>
    <depend>moveit_msgs</depend>
    <depend>moveit_ros_planning_interface</depend>
    <!-- <depend>open3d_ros</depend> -->

    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_lint_common</test_depend>
    
    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>